--- a/R/anomalies.Rmd
+++ b/R/anomalies.Rmd
@@ -29,12 +29,12 @@ library("patchwork")
 ffd <- read.csv(here("data", "raw", "ffd202103.csv"),
                 col.names = c("year", "month", "flow", "divcode", "divdesc", "product", "value", "tonnes"))
 
-# Summarise by div
-ffd <- ffd %>%
-        group_by(year, month, flow, divdesc) %>%
-        summarise(value = sum(value),
-                  tonnes = sum(tonnes)) %>%
-        rename(product = divdesc)
+# # Summarise by div
+# ffd <- ffd %>%
+#         group_by(year, month, flow, divdesc) %>%
+#         summarise(value = sum(value),
+#                   tonnes = sum(tonnes)) %>%
+#         rename(product = divdesc)
 
 
 # Value data setup -------------------------------------------------------------
@@ -217,16 +217,14 @@ diff$charts
 
 ## Methodology
 
-The empirical derivation of the escalation ranges was carried out using R. The scripts are available alongside this report. For each indicator the method for deriving an escalation range was as follows:
+For each series the method for deriving an escalation range was as follows:
 
-1.	Obtain data for the indicator and convert into a time series in R
+1.	Convert data into a time series
 2.	Determine how many first differences[^1]  and seasonal differences[^2]  need to be taken to make the time series stationary (constant statistical properties over time) using the ndiffs() and nsdiffs() functions from the forecast package in R
 3.	Carry out the required differencing using the diff() function from the forecast package in R
 4.	Using the data points in this stationary time series, find the threshold for outliers
 5.	Look at +/-5% of this threshold to get an escalation range which allows for some uncertainty
 6.	Sense check the escalation range by considering which past events would have warranted escalation given the derived range
-
-The sense check of the escalation ranges took the form of a workshop with relevant members of the food supply team, and further sharing of the results with other Defra colleagues for feedback.
 
 The main assumptions behind this method are:
 
@@ -234,7 +232,6 @@ The main assumptions behind this method are:
 -	The differences of a time series can be used to detect crises related to the original time series. Specifically jumps, 
 kinks, spikes etc… are not distinguished between in difference time series therefore the assumption is that all of these events should be identified by the escalation range.
 
-In this section the specifics of how the method was applied to each indicator are outlined. In general the escalation range is at the upper end of values for a given indicator as he aim is to flag unusually high levels of the indicator, the exception to this is the supply and demand indicators where the aim is to identify unusually low differences between supply and demand. This includes details of the workshop feedback on the preliminary findings and any modifications made as a result. At the end of the section some additional practical decisions on applying the escalation ranges that were reached in the workshop are explained.
 
 [^1]: Taking the first difference of a time series means converting it to a time series of the differences between adjacent observations in the original time series.
 [^2]: Taking the seasonal difference of a time series means converting it to a time series of the changes from one season to the next in the original time series.
