--- a/R/ffd_report.Rmd
+++ b/R/ffd_report.Rmd
@@ -259,13 +259,32 @@ euirlyoy <- euirl %>%
             mutate(diff = lag(value, n = 12),
                    val = money(value),
                    yoy = percent((value/diff)-1, accuracy = 1)) %>% 
-            filter(date == "2021-03-01") %>% 
+            filter(date == "2021-03-01") %>%
             pivot_wider(names_from = date, values_from = c(val,yoy)) %>% 
             ungroup() %>% 
             select(!c(diff, value))
 
-            
-
+euirl %>%            
+            ungroup() %>% 
+            group_by(divdesc, flow, euirl) %>% 
+            mutate(diff = lag(value, n = 12),
+                   val = money(value),
+                   yoyval = value - diff,
+                   yoypc = percent((value/diff)-1, accuracy = 1)) %>% 
+            filter(date == "2021-03-01") %>%
+            ggplot(aes(x = euirl, y = yoyval)) +
+            geom_bar(aes(fill = euirl),stat = "identity") +
+            facet_grid(rows = vars(divdesc), cols = vars(flow), scales = "free") +
+            scale_y_continuous(labels = comma) +
+            theme_minimal() +
+            theme(panel.grid.minor = element_blank(),
+                  legend.title = element_blank(),
+                  legend.position = "bottom",
+                  strip.text.y = element_text(angle = 0)) +
+            labs(x = NULL,
+                 y = "value")
+ 
+ 
 euirl %>% 
   filter(flow == "Imports") %>% 
   ggplot(aes(x = date, y = value)) +
