--- a/R/ffd_report.Rmd
+++ b/R/ffd_report.Rmd
@@ -283,7 +283,7 @@ euirl %>%
                   strip.text.y = element_text(angle = 0)) +
             labs(x = NULL,
                  y = "value")
- 
+
  
 euirl %>% 
   filter(flow == "Imports") %>% 
@@ -320,6 +320,31 @@ euirl %>%
   labs(x = NULL,
        y = "Value",
        title = "Value of exports by region")
+
+
+```
+``` {r}
+
+euirl %>%            
+            ungroup() %>% 
+            group_by(divdesc, flow, euirl) %>% 
+            mutate(diff = lag(value, n = 12),
+                   val = money(value),
+                   yoyval = value - diff,
+                   yoypc = percent((value/diff)-1, accuracy = 1)) %>% 
+            filter(date == "2021-03-01", 
+                   euirl != "RoW") %>%
+            ggplot(aes(x = flow, y = yoyval, group = euirl)) +
+            geom_bar(aes(fill = euirl), stat = "identity") +
+            facet_wrap(vars(divdesc), scales = "free", labeller = label_wrap_gen(width = 20)) +
+            scale_y_continuous(labels = comma) +
+            theme_minimal() +
+            theme(panel.grid.minor = element_blank(),
+                  legend.title = element_blank(),
+                  legend.position = "bottom",
+                  strip.text.y = element_text(angle = 0)) +
+            labs(x = NULL,
+                 y = "value")
 
 
 ```
