--- a/R/ffd_quarters.Rmd
+++ b/R/ffd_quarters.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
   echo = FALSE,
   message = FALSE,
   warning = FALSE,
-  results = "hide",
+  # results = "hide",
   fig.width = 9,
   fig.height = 7
 )
@@ -92,6 +92,8 @@ nonresponse <- read_csv(here("data", "raw", params$nrdata),
 
 divcodes <- read.csv(here("data", "tidy", "divcodes.csv"))
 
+
+
 # Useful things -------------------------------------------------------------
 
 chart_theme <- theme_minimal() +
@@ -108,6 +110,7 @@ chart_theme <- theme_minimal() +
 
 ```{r quarters}
 
+'\u2718
 # FFD totals -----------------------------------------------------------------
 # FFD by div
 divs <- ffd %>% 
