--- a/R/ffd_report.Rmd
+++ b/R/ffd_report.Rmd
@@ -170,14 +170,20 @@ Trade has generally recovered from the downturn seen in the first two months of 
 `r knitr::kable(euyoy)`
 
 
-```{r }
+```{r fig.height=4}
+
+# knitr::opts_chunk$set(
+# 	fig.width = 4,
+# 	fig.height = 4
+# )
 
 ffdall %>%
   ggplot(aes(x = date, y = value)) + 
   geom_line(aes(colour = flow), stat = "identity") +
-  facet_grid(rows = ~flow) +
+  # facet_grid(rows = ~flow) +
   scale_y_continuous(labels = scales::comma) +
   theme_minimal() +
+  theme(legend.title = element_blank()) +
   labs(x = NULL,
        y = "£000s",
        title = "Value of trade in food, feed and drink")
@@ -200,10 +206,11 @@ eu %>%
   geom_line(aes(colour = flow)) +
   facet_grid(rows = ~eunoneu) +
   theme_minimal() +
+    theme(legend.title = element_blank()) +
   scale_y_continuous(labels = comma) +
   labs(x = NULL,
        y = "£000s",
-       title = "Value of trade")
+       title = "Value of trade, EU/Non EU")
 
 ```
 
@@ -357,7 +364,8 @@ euirl %>%
                   legend.position = "bottom",
                   strip.text.y = element_text(angle = 0)) +
             labs(x = NULL,
-                 y = "value")
+                 y = "value",
+                 title = "Year on year change in trade values, EU")
 
 
 ```
